# social-network

./: .gitignore
socialNetwork/: Dockerfile  Dockerfile-nginx  docker-compose.yml
socialNetwork/config/: jaeger-config.yml  jaeger-ui.json  otel-collector-config.yml  service-config.json
socialNetwork/docker/openresty-thrift/: Dockerfile
socialNetwork/docker/thrift-microservice-deps/cpp/: Dockerfile
socialNetwork/helm-chart/: metric_server.yaml
socialNetwork/helm-chart/socialnetwork/: Chart.yaml  GIT_TOKEN  values.yaml
socialNetwork/nginx-web-server/: jaeger-config.json
socialNetwork/nginx-web-server/conf/: opentelemetry_module.conf
socialNetwork/nginx-web-server/pages/: jaeger-config.json
socialNetwork/src/: CMakeLists.txt  tracing.h
socialNetwork/src/ComposePostService/: CMakeLists.txt  ComposePostHandler.h  ComposePostService.cpp
socialNetwork/src/HomeTimelineService/: CMakeLists.txt  HomeTimelineHandler.h  HomeTimelineService.cpp
socialNetwork/src/MediaService/: CMakeLists.txt  MediaHandler.h  MediaService.cpp
socialNetwork/src/PostStorageService/: CMakeLists.txt  PostStorageHandler.h  PostStorageService.cpp
socialNetwork/src/SocialGraphService/: CMakeLists.txt  SocialGraphHandler.h  SocialGraphService.cpp
socialNetwork/src/TextService/: CMakeLists.txt  TextHandler.h  TextService.cpp
socialNetwork/src/UniqueIdService/: CMakeLists.txt  UniqueIdHandler.h  UniqueIdService.cpp
socialNetwork/src/UrlShortenService/: CMakeLists.txt  UrlShortenHandler.h  UrlShortenService.cpp
socialNetwork/src/UserMentionService/: CMakeLists.txt  UserMentionHandler.h  UserMentionService.cpp
socialNetwork/src/UserService/: CMakeLists.txt  UserHandler.h  UserService.cpp
socialNetwork/src/UserTimelineService/: CMakeLists.txt  UserTimelineHandler.h  UserTimelineService.cpp
socialNetwork/src/WriteHomeTimelineService/: CMakeLists.txt  WriteHomeTimelineService.cpp
(+66 files in other folders)
